--- a/less/index.less
+++ b/less/index.less
@@ -20,6 +20,6 @@ body {
 
 @import './components/TopBar/TopBar';
 @import './components/Header/Header';
-@import './components/Tabs/Tabs';
-@import './components/Cards/Cards';
+@import './components/tabs/tabs';
+@import './components/cards/cards';
 @import './components/Carousel/Carousel';
